syntax = "proto2";
import "google/protobuf/descriptor.proto";

/////////////
// Monero  //
/////////////

message MoneroAccountPublicAddress {
    optional bytes m_spend_public_key = 1;
    optional bytes m_view_public_key = 2;
}

message MoneroTxDestinationEntry {
    optional uint64 amount = 1;
    optional MoneroAccountPublicAddress addr = 2;
    optional bool is_subaddress = 3;
}

message MoneroTsxData {
	optional uint32 version = 1;
	optional bytes payment_id = 2;
	optional uint64 unlock_time = 3;
	repeated MoneroTxDestinationEntry outputs = 4;
	optional MoneroTxDestinationEntry change_dts = 5;
	optional uint32 num_inputs = 6;
	optional uint32 mixin = 7;
	optional uint64 fee = 8;
	optional uint32 account = 9;
	repeated uint32 minor_indices = 10;
	optional bool is_multisig = 11;
	optional string exp_tx_prefix_hash = 12;
	repeated bytes use_tx_keys = 13;
}

message MoneroSubAddrIndicesList {
    optional uint32 account = 1;
    repeated uint32 minor_indices = 2;
}

message MoneroTransferDetails {
    optional bytes out_key = 1;
    optional bytes tx_pub_key = 2;
    repeated bytes additional_tx_pub_keys = 3;
    optional uint64 m_internal_output_index = 4;
}

message MoneroExportedKeyImage {
    optional bytes iv = 1;
    optional bytes tag = 2;
    optional bytes blob = 3;
}
